FVの挙動修正

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -17,7 +17,7 @@
     <div class="area-hero">
       <div class="hero-wrapper">
         <div class="container position-relative">
-          <div class="block-hero-first"><img src="/img/hero_text1.png" alt="森のスープ屋の夜 2019.10.14 open" /></div>
+          <div class="block-hero-first"><img src="/img/hero_text1.png" alt="森のスープ屋の夜 お手当てのための宿" /></div>
           <div class="block-hero-second"><img src="/img/hero_text2.png" alt="旅へ　目的地は私の中にある静かな場所　とてもあたたかくて　まあるいところ。" /></div>
         </div>
         <div class="hero-light"><img src="/img/house_light.png" alt="" /></div>
