--- a/src/pages/reservation/index.html
+++ b/src/pages/reservation/index.html
@@ -17,7 +17,7 @@
           <h1><img class="image-header-logo" src="/img/footer_logo.png" alt="森のスープ屋の夜"><span class="header-text">お手当てのための宿</span></h1>
         </div>
         <div class="header-toggle">
-          <a href="https://cinemavalley.net/" class="nav-home js-nav-close">
+          <a href="/" class="nav-home js-nav-close">
             <img src="/img/nav_button_home.png" alt="ホーム">
           </a>
         </div>
