ページの再調整

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -250,11 +250,24 @@
     </section>
     <div class="area-other inview fadeup-other1" id="outro">
       <div class="container">
-        <div class="schedule-area">
+        <ul class="other-list">
+          <li>
+            <span class="js-modal link-other link-map_story text-disabled" data-id="story">
+              <span class="block">森との出会い</span>
+              <span class="text-en">Story</span>
+            </span>
+          </li>
+          <li>
+            <span class="js-modal link-other link-map_message" data-id="message">
+              <span class="block">お手当てのための宿の一日</span>
+            </span>
+          </li>
+        </ul>
+        <!-- <div class="schedule-area">
           <span class="js-modal schedule-title" data-id="message">
             <img src="/img/schedule-title.png" alt="お手当ての為の宿の一日">
           </span>
-        </div>
+        </div> -->
       </div>
     </div>
     <div class="modal-content" id="story">
