画像の表示の調整

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -17,16 +17,16 @@
     <div class="area-hero">
       <div class="hero-wrapper">
         <div class="container position-relative">
-          <div class="block-hero-first"><img src="/img/hero_text1.png" alt="森のスープ屋の夜 お手当てのための宿" /></div>
-          <div class="block-hero-second"><img src="/img/hero_text2.png" alt="旅へ　目的地は私の中にある静かな場所　とてもあたたかくて　まあるいところ。" /></div>
+          <div class="block-hero-first"><img src="/img/hero_text1.png" alt="森のスープ屋の夜 お手当てのための宿" decoding="async" /></div>
+          <div class="block-hero-second"><img src="/img/hero_text2.png" alt="旅へ　目的地は私の中にある静かな場所　とてもあたたかくて　まあるいところ。" decoding="async" /></div>
         </div>
-        <div class="hero-light"><img src="/img/house_light.png" alt="" /></div>
+        <div class="hero-light"><img src="/img/house_light.png" alt="" decoding="async" /></div>
       </div>
     </div>
     <section class="area-intro inview fadeup-intro1" id="intro">
       <div class="container margin-sp position-relative bg-intro">
         <div class="intro-header fadeup-intro2">
-          <h2 class="title intro-title"><img class="image-intro" src="/img/intro_text.png" alt="ようこそ　森のスープ屋の夜へ" /></h2>
+          <h2 class="title intro-title"><img class="image-intro" src="/img/intro_text.png" alt="ようこそ　森のスープ屋の夜へ" decoding="async" /></h2>
         </div>
         <div class="intro-main fadeup-intro3">
           <p>ここは森の休憩所。<br>ふかふかの森と質素な小屋と。<br>まずはお風呂にしませんか。</p>
@@ -40,7 +40,7 @@
     <section class="area-map inview fadeup-map1" id="map">
       <div class="map-block fadeup-map2">
         <div class="map-header">
-          <h2><img class="image-map" src="/img/map_text.png" alt="森のお散布map" /></h2>
+          <h2><img class="image-map" src="/img/map_text.png" alt="森のお散布map" loading="lazy" /></h2>
         </div>
         <ul class="map-list fadeup-map3">
           <li><span class="js-modal link-map link-map_meditation" data-id="meditation">木々と瞑想室</span></li>
@@ -56,7 +56,7 @@
       </div>
     </section>
     <div class="modal-content" id="meditation">
-      <div class="modal-flex"><i class="js-modal-close"><img src="/img/icon_close.png" alt="閉じる"/></i>
+      <div class="modal-flex"><i class="js-modal-close"><img src="/img/icon_close.png" alt="閉じる" loading="lazy" /></i>
         <div class="modal-block">
           <div class="modal-block_header">
             <h2 class="mb40"><img src="/img/meditation_text.png" alt="木々と瞑想室" /></h2>
@@ -148,15 +148,15 @@
       </div>
     </div>
     <div class="modal-content" id="bath">
-      <div class="modal-flex"><i class="js-modal-close"><img src="/img/icon_close.png" alt="閉じる"/></i>
+      <div class="modal-flex"><i class="js-modal-close"><img src="/img/icon_close.png" alt="閉じる" loading="lazy" /></i>
         <div class="modal-block">
           <div class="modal-block_header">
-            <h2 class="mb10"><img src="/img/bath_text.png" alt="心と体を洗う　黒文字風呂" /></h2>
+            <h2 class="mb10"><img src="/img/bath_text.png" alt="心と体を洗う　黒文字風呂" loading="lazy" /></h2>
           </div>
           <div class="modal-block_gallery">
             <div class="js-slider-gallery">
-              <div class="slick-slide"><img src="/img/bath_01.jpg" alt="" /></div>
-              <div class="slick-slide"><img src="/img/bath_02.jpg" alt="" /></div>
+              <div class="slick-slide"><img src="/img/bath_01.jpg" alt="黒文字風呂の写真1" loading="lazy" /></div>
+              <div class="slick-slide"><img src="/img/bath_02.jpg" alt="黒文字風呂の写真2" loading="lazy" /></div>
             </div>
           </div>
           <div class="modal-block_content tac-pc pt40-pc">
@@ -170,13 +170,13 @@
       <div class="modal-flex"><i class="js-modal-close"><img src="/img/icon_close.png" alt="閉じる"/></i>
         <div class="modal-block">
           <div class="modal-block_header">
-            <h2 class="mb40"><img src="/img/gallery_text.png" alt="" /></h2>
+            <h2 class="mb40"><img src="/img/gallery_text.png" alt="森のスープ屋" loading="lazy" /></h2>
           </div>
           <div class="modal-block_gallery">
             <div class="js-slider-gallery">
-              <div class="slick-slide"><img src="/img/soup_01.jpg" alt="" /></div>
-              <div class="slick-slide"><img src="/img/soup_02.jpg" alt="" /></div>
-              <div class="slick-slide"><img src="/img/soup_03.jpg" alt="" /></div>
+              <div class="slick-slide"><img src="/img/soup_01.jpg" alt="森のスープ屋の写真1" loading="lazy" /></div>
+              <div class="slick-slide"><img src="/img/soup_02.jpg" alt="森のスープ屋の写真2" loading="lazy" /></div>
+              <div class="slick-slide"><img src="/img/soup_03.jpg" alt="森のスープ屋の写真3" loading="lazy" /></div>
             </div>
           </div>
           <div class="modal-block_content tac-pc pt30-pc">
@@ -197,7 +197,7 @@
         <div class="year-block slider-year_item header inview fadeup-year1">
           <div class="container position-relative">
             <div class="year-header">
-              <h2 class="title"><img class="image-year" src="/img/year_text1.png" alt="森のいちねん" /></h2>
+              <h2 class="title"><img class="image-year" src="/img/year_text1.png" alt="森のいちねん" loading="lazy" /></h2>
             </div>
             <div class="year-bg blend-multiply"></div>
           </div>
@@ -205,7 +205,7 @@
         <div class="year-block slider-year_item season spring inview fadeup-year2">
           <div class="container position-relative">
             <div class="season-block spring">
-              <h3 class="title-season"><img src="/img/year_text2.png" alt="春" /></h3>
+              <h3 class="title-season"><img src="/img/year_text2.png" alt="春" loading="lazy" /></h3>
               <div class="tac-sp">
                 <p>草木の芽吹きにこころ弾む春。<br>土のベッドに転がり夕日を浴びる。<br>呼吸を深く。</p>
                 <p>眠りの木に寄り添うやわらかな夜。</p>
@@ -216,7 +216,7 @@
         <div class="year-block slider-year_item season summer inview fadeup-year3">
           <div class="container position-relative">
             <div class="season-block summer">
-              <h3 class="title-season"><img src="/img/year_text3.png" alt="夏" /></h3>
+              <h3 class="title-season"><img src="/img/year_text3.png" alt="夏" loading="lazy" /></h3>
               <div class="tac-sp">
                 <p>お月さまを待つ頃<br>森いっぱいに響きわたるのは<br>ヒグラシの唄声。</p>
                 <p>優しい風が心を撫でる星降る夜。</p>
@@ -238,7 +238,7 @@
         <div class="year-block slider-year_item season winter inview fadeup-year5">
           <div class="container position-relative">
             <div class="season-block winter">
-              <h3 class="title-season"><img src="/img/year_text5.png" alt="冬" /></h3>
+              <h3 class="title-season"><img src="/img/year_text5.png" alt="冬" loading="lazy" /></h3>
               <div class="tac-sp">
                 <p>寒い冬は想いを温めるとき。<br>ストーブに火を入れて<br>ゆらゆら私と過ごす夜。</p>
                 <p>白い世界で見つけた色鮮やかもの。<br>私の中に映し出されたのは<br>真っ赤な林檎。</p>
@@ -271,10 +271,10 @@
       </div>
     </div>
     <div class="modal-content" id="story">
-      <div class="modal-flex"><i class="js-modal-close"><img src="/img/icon_close.png" alt="閉じる"/></i>
+      <div class="modal-flex"><i class="js-modal-close"><img src="/img/icon_close.png" loading="lazy" alt="閉じる"/></i>
         <div class="modal-block">
-          <div class="modal-block_header"><img class="image-story_badge" src="/img/story_badge.png" alt="" />
-            <h3 class="title-medium title-story"><img src="/img/story_text.png" alt="森との出会い" /></h3>
+          <div class="modal-block_header"><img class="image-story_badge" src="/img/story_badge.png" alt="" loading="lazy" />
+            <h3 class="title-medium title-story"><img src="/img/story_text.png" alt="森との出会い" loading="lazy" /></h3>
           </div>
           <div class="modal-block_content">
             <p>鳥取県 大山。<br>雪降る日に谷を臨む小さな森に出会いました。<br>ゆっくり歩くその足は止まり、「ここだ」と感じました。<br>森の中央 スープ屋の建つ場所です。<br>一瞬寒さを忘れて炎の揺らぎと温もりを感じたのを 今でも思い出します。<br>この場所を 「うれしい」を映し出す（cinema）、谷（valley） シネマバレイと名付けました。</p>
@@ -284,11 +284,11 @@
       </div>
     </div>
     <div class="modal-content" id="message">
-      <div class="modal-flex"><i class="js-modal-close"><img src="/img/icon_close.png" alt="閉じる"/></i>
+      <div class="modal-flex"><i class="js-modal-close"><img src="/img/icon_close.png" loading="lazy" alt="閉じる"/></i>
         <div class="modal-block modal-block_message">
           <div class="modal-block_header">
             <h3 class="modal-title_schedule">
-              <img src="/img/schedule-title.png" alt="お手当ての為の宿の一日">
+              <img src="/img/schedule-title.png" alt="お手当ての為の宿の一日" loading="lazy" />
             </h3>
           </div>
           <div class="modal-block_content">
@@ -385,7 +385,7 @@
         </ul>
       </div>
     </div>
-    <div class="area-gmap inview fadeup-map1" id="access"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3253.239178762925!2d133.46695471491114!3d35.374523417784694!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3556f53b9dba3295%3A0x69026627c4d5cb46!2z5qOu44Gu44K544O844OX5bGLY2luZW1hVmFsbGV5!5e0!3m2!1sja!2sjp!4v1552822556237" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe></div>
+    <div class="area-gmap inview fadeup-map1" id="access"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3253.239178762925!2d133.46695471491114!3d35.374523417784694!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3556f53b9dba3295%3A0x69026627c4d5cb46!2z5qOu44Gu44K544O844OX5bGLY2luZW1hVmFsbGV5!5e0!3m2!1sja!2sjp!4v1552822556237" width="600" height="450" frameborder="0" style="border:0" allowfullscreen title="森のスープ屋の夜　アクセスマップ"></iframe></div>
     <div class="gmap-footer"><a class="button button-primary" href="access/">くわしいアクセス情報はこちら</a></div>
   </main>
   <div id="totop"><a class="totop-item" href="#"><span class="totop-candle"><img src="/img/candle.png" alt=""></span><span class="totop-candlelight"><img src="/img/candle_light.png" alt=""></span></a></div>
