ユーザビリティ調整

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -388,7 +388,7 @@
     <div class="area-gmap inview fadeup-map1" id="access"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3253.239178762925!2d133.46695471491114!3d35.374523417784694!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3556f53b9dba3295%3A0x69026627c4d5cb46!2z5qOu44Gu44K544O844OX5bGLY2luZW1hVmFsbGV5!5e0!3m2!1sja!2sjp!4v1552822556237" width="600" height="450" frameborder="0" style="border:0" allowfullscreen title="森のスープ屋の夜　アクセスマップ"></iframe></div>
     <div class="gmap-footer"><a class="button button-primary" href="access/">くわしいアクセス情報はこちら</a></div>
   </main>
-  <div id="totop"><a class="totop-item" href="#"><span class="totop-candle"><img src="/img/candle.png" alt=""></span><span class="totop-candlelight"><img src="/img/candle_light.png" alt=""></span></a></div>
+  <div id="totop"><a class="totop-item" href="#" title="ページトップへ戻る"><span class="totop-candle"><img src="/img/candle.png" alt=""></span><span class="totop-candlelight"><img src="/img/candle_light.png" alt=""></span></a></div>
   <%- include( '_footer.ejs' ); %>
   <%- include( '_sound.ejs' ); %>
   <script type="module" src="/main.ts"></script>
