--- a/src/pages/reservation/index.html
+++ b/src/pages/reservation/index.html
@@ -66,7 +66,7 @@
         </div>
       </div>
     </main>
-    <div id="totop"><a class="totop-item" href="#"><span class="totop-candle"><img src="/img/candle.png" alt=""></span><span class="totop-candlelight"><img src="/img/candle_light.png" alt=""></span></a></div>
+    <div id="totop"><a class="totop-item" href="#" title="ページトップへ戻る"><span class="totop-candle"><img src="/img/candle.png" alt=""></span><span class="totop-candlelight"><img src="/img/candle_light.png" alt=""></span></a></div>
     <%- include( '_footer.ejs' ); %>
     <script type="module" src="/main.ts"></script>
   </body>
