ページ調整

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -288,7 +288,7 @@
         <div class="modal-block modal-block_message">
           <div class="modal-block_header">
             <h3 class="modal-title_schedule">
-              <img src="/img/schedule-title.png" alt="お手当ての為の宿の一日" loading="lazy" />
+              <img src="/img/schedule-title.png" alt="お手当ての為の宿の一日" loading="lazy" width="200" />
             </h3>
           </div>
           <div class="modal-block_content">
@@ -316,6 +316,9 @@
                 いのちいっぱい受け取るための<br>
                 清らかな空間を調えてお待ちしています
               </p>
+            </div>
+            <div class="block-ten">
+              十
             </div>
             <div class="block-schedule">
               <div class="block-schedule__wrap">
