「森との出会い」フェードイン追加

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -192,7 +192,7 @@
         </div>
       </div>
     </div>
-    <section class="area-year" id="year">
+    <section class="area-year inview" id="year">
       <div class="slider-year-sp">
         <div class="year-block slider-year_item header inview fadeup-year1">
           <div class="container position-relative">
